--- a/youtube.html
+++ b/youtube.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="imagens/tela-youtube.png" alt="YouTube">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/playlists" target="_blank"> ACESSE</a>
+    <a href="https://www.youtube.com/@jovelinomoraes1892" target="_blank"> ACESSE</a>
     
 </body>
 </html>
