--- a/facebook.html
+++ b/facebook.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="https://www.facebook.com/jovelino.moraes" target="_blank"> ACESSE</a>
+    <a href="https://www.facebook.com/gustavoguanabara" target="_blank"> ACESSE</a>
     
 </body>
 </html>
